--- a/views/object.twig
+++ b/views/object.twig
@@ -5,7 +5,7 @@
             <div class='infoobject'>
                 <div class='infoname'>{{ element.name }}</div>
                 {% for relation in element.relations %}
-                    <div class='infopar'><b>{{ relation.property.name }}</b>
+                    <div class='infopar'><b>{{ relation.property.name|capitalize }}:</b>
                         {{ render(relation.value,{plain: true}) }}
                     </div>
                 {% endfor %}
