--- a/web/style/style.css
+++ b/web/style/style.css
@@ -4,6 +4,7 @@ html, body{
     width:100%;
     height:100%;
     font-family: sans-serif;
+    overflow: hidden;
 }
 
 .map {
@@ -11,24 +12,54 @@ html, body{
     width: 100%;
 }
 
+.navbar.navbar-default {
+    margin-bottom: 0;
+}
+.map-container {
+   height: 100%;
+}
+
 #map{
     padding:0;
     margin:0;
     height:100%;
-    position: fixed;
-    top: 0px;
-    left: 230px;
+    left: 0px;
+    position: absolute;
 }
 
+.legende {
+    width:240px;
+    background-color: white;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom:10px;
+    border-right: 1px solid #ddd;
+    height: 100%;
+    overflow:auto;
+    float: left;
+    z-index: 1;
+    position: relative;
+}
 
 .layers{
-    width:230px;
+    width:30px;
     background-color: rgb(37, 42, 58);
-    position: fixed;
-    top: 0px;
     left: 0px;
-    z-index: 1000;
     height: 100%;
+    float:left;
+    overflow-y: auto;
+    z-index: 1;
+    position: relative;
+}
+
+.layers:hover {
+    width: 230px;
+}
+
+#close-info {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 
@@ -36,7 +67,6 @@ html, body{
     width:230px;
     background-color: rgb(37, 42, 58);
     position: fixed;
-    top: 0px;
     right: 0px;
     z-index: 1000;
     height: 100%;
@@ -119,38 +149,6 @@ text-decoration:underline;
     background-color:#FFAD65;	
 }
 
-.legende_knop{
-    width:210px;
-    background-color: #DE6800;
-    position: fixed;
-    top: 0px;
-    left: 230px;
-    z-index: 1000;
-    padding-left: 40px;
-    padding-top: 10px;
-    border-bottom: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    color: white;
-    font-weight: bold;
-    height: 30px;
-    cursor:pointer;
-}
-
-
-.legende{
-    width:240px;
-    background-color: white;
-    position: fixed;
-    top: 0px;
-    left: 230px;
-    z-index: 900;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom:10px;
-    border-right: 1px solid #ddd;
-    height: 100%;
-    overflow:auto;
-}
 
 
 .legende_content{
