Search in navbar

--- a/views/home.twig
+++ b/views/home.twig
@@ -32,6 +32,7 @@
                     <a>Legende</a>
                 </li>
                 <li id="insert-link"><a>Toevoegen</a></li>
+                <li id="search-link"><a>Search</a></li>
             </ul>
         </div>
     </div>
