--- a/web/style/style.css
+++ b/web/style/style.css
@@ -2,10 +2,34 @@ html, body{
     padding:0;
     margin:0;
     width:100%;
-    height:100%;
+    height:800px;
     font-family: sans-serif;
     overflow: hidden;
 }
+
+.logo {
+    position: absolute;
+    background-image: url('../images/Logo.png');
+    height: 100px;
+    width: 126px;
+    background-size: 126.5px 100px;
+    background-repeat: no-repeat;
+    margin-left: 0px;
+    top:0px;
+
+}
+
+
+.logo2 {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    margin-left: 130px;
+    padding: 1px;
+    color: darkslategrey;
+    top: 0px;
+}
+
 
 .map {
     height: 400px;
@@ -13,7 +37,10 @@ html, body{
 }
 
 .navbar.navbar-default {
+    top: 100px;
     margin-bottom: 0;
+    border: 1px solid lightgrey;
+
 }
 .map-container {
    height: 100%;
@@ -21,39 +48,52 @@ html, body{
 
 #map{
     padding:0;
+    top: 152px;
     margin:0;
     height:100%;
     left: 0px;
+    z-index: 0;
     position: absolute;
 }
 
 .legende {
     width:240px;
+    left: 30px;
+    top: 100px;
     background-color: white;
     padding-left: 10px;
     padding-top: 10px;
     padding-bottom:10px;
     border-right: 1px solid #ddd;
-    height: 100%;
+    height: 700px;
     overflow:auto;
     float: left;
     z-index: 1;
     position: relative;
+    border-radius:2px;
 }
 
 .layers{
-    width:30px;
-    background-color: rgb(37, 42, 58);
-    left: 0px;
-    height: 100%;
+    width:33px;
+    top: 100px;
+    border-radius:2px;
+    background-image: url('../Images/index.png');
+    left: 20px;
+    height:33px;
     float:left;
-    overflow-y: auto;
+    overflow: hidden;
     z-index: 1;
     position: relative;
+
 }
 
 .layers:hover {
-    width: 230px;
+    width: 190px;
+    height: 700px;
+    overflow-y: auto;
+    left: 30px;
+    background-image: none;
+    background-color: rgb(37, 42, 58);
 }
 
 #close-info {
@@ -73,6 +113,7 @@ html, body{
     display:none;
     color: white;
     overflow:auto;
+    top: 152px;
 }
 
 
@@ -152,7 +193,7 @@ text-decoration:underline;
 
 
 .legende_content{
-   padding-top:40px;
+   padding-top:0px;
    padding-right:10px;
 }
 
