--- a/views/home.twig
+++ b/views/home.twig
@@ -1,11 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="http://openlayers.org/en/v3.0.0/css/ol.css" type="text/css">
-    <link rel="stylesheet" href="{{ app.request.basepath }}/style/style.css" type="text/css">
-    <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script>
-    <script src="{{ app.request.basepath }}/scripts/search.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
           integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
@@ -13,7 +8,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
             integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
             crossorigin="anonymous"></script>
-    <title>Search Demo 2</title>
+
+    <!-- <link rel="stylesheet" href="http://openlayers.org/en/v3.0.0/css/ol.css" type="text/css"> -->
+    <link rel="stylesheet" href="{{ app.request.basepath }}/style/ol.css" type="text/css">
+    <link rel="stylesheet" href="{{ app.request.basepath }}/style/style.css" type="text/css">
+    <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script>
+    <script src="{{ app.request.basepath }}/scripts/search.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+
+
+    <title>Sea-Arch</title>
 </head>
 <body>
 <nav class="navbar navbar-default hidden-sm hidden-xs">
@@ -24,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">GeoSearch</a>
+           <!-- <a class="navbar-brand" href="/">GeoSearch</a> -->
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
@@ -33,6 +37,7 @@
                 </li>
                 <li id="insert-link"><a>Toevoegen</a></li>
                 <li id="search-link"><a>Search</a></li>
+                <li id="info-link"><a>Info</a></li>
             </ul>
         </div>
     </div>
@@ -62,6 +67,8 @@
         </div>
     </span>
     <span id="map" class="map"></span>
+    <span id="ol.control.Zoom" class="ol.control.Zoom"></span>
+    <span id="ol.Zoom" class="ol.Zoom"></span>
 
     <div id="info">
         <span id='close-info'>x</span>
@@ -69,6 +76,9 @@
 
         </div>
     </div>
+
+<div id="logo" class="logo"></div>
+<div id="logo2" class="logo2"><h4>Archeologisch erfgoed in de Noordzee</h4></div>
 
 
 
