--- a/views/home.twig
+++ b/views/home.twig
@@ -32,12 +32,37 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
-                <li class="legende_knop">
-                    <a>Legende</a>
-                </li>
-                <li id="insert-link"><a>Toevoegen</a></li>
-                <li id="search-link"><a>Search</a></li>
-                <li id="info-link"><a>Info</a></li>
+                <li id="legende_knop" class="popupHoverElement"><div id="two" class="popupBox">Legende</div></li>
+                <li id="insert-link"class="popupHoverElement"><div id="two" class="popupBox">Toevoegen</div></li>
+                <li id="search-link" label="Zoek" class="popupHoverElement"><div id="two" class="popupBox">Zoek</div></li>
+
+
+
+
+
+                <li id="info-link"></li>
+
+                    <div id="Div3" style=" ">
+
+
+                        <input type="button" name="button_close" id="button_close" />
+                        <h4>SeArch - Archeologisch Erfgoed in de Noordzee</h4>
+
+                    </div>
+
+
+                <li id="fullscreen-link" class="popupHoverElement"><div id="two" class="popupBox">Vergroten</div><a></a></li>
+                <li id="depth-link" class="popupHoverElement"><div id="two" class="popupBox">Diepteprofiel</div><a></a></li>
+                <li id="share-link" class="popupHoverElement"><div id="two" class="popupBox">Share</div><a></a></li>
+                <li id="print-link" class="popupHoverElement"><div id="two" class="popupBox">Print</div><a></a></li>
+                <li id="question-link" class="popupHoverElement"><div id="two" class="popupBox">Handleiding</div><a></a></li>
+
+                <li id="draw-link" class="popupHoverElement"><div id="two" class="popupBox">Tekenen</div></li>
+
+                <li id="measure-link" class="popupHoverElement"><div id="two" class="popupBox">Meten</div></li>
+
+
+
             </ul>
         </div>
     </div>
