--- a/views/home.twig
+++ b/views/home.twig
@@ -34,19 +34,19 @@
             <ul class="nav navbar-nav">
                 <li id="legende_knop" class="popupHoverElement"><div id="two" class="popupBox">Legende</div></li>
                 <li id="insert-link"class="popupHoverElement"><div id="two" class="popupBox">Toevoegen</div></li>
-                <li id="search-link" label="Zoek" class="popupHoverElement"><div id="two" class="popupBox">Zoek</div></li>
+                <li id="search-link" class="popupHoverElement"><div id="two" class="popupBox">Zoek</div></li>
 
 
 
 
 
-                <li id="info-link"></li>
+                <li id="info-link"class="popupHoverElement"><div id="two" class="popupBox">Info</div></li>
 
                     <div id="Div3" style=" ">
 
 
-                        <input type="button" name="button_close" id="button_close" />
-                        <h4>SeArch - Archeologisch Erfgoed in de Noordzee</h4>
+                        <li id="button_close"></li>
+                        <p><h3> SeArch - Archeologisch Erfgoed in de Noordzee</h3></p>
 
                     </div>
 
@@ -96,7 +96,7 @@
     <span id="ol.Zoom" class="ol.Zoom"></span>
 
     <div id="info">
-        <span id='close-info'>x</span>
+        <span id='close-info'></span>
         <div id="info-contents">
 
         </div>
