--- a/views/baselayout.twig
+++ b/views/baselayout.twig
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="http://openlayers.org/en/v3.0.0/css/ol.css" type="text/css">
+    <!-- <link rel="stylesheet" href="http://openlayers.org/en/v3.0.0/css/ol.css" type="text/css"> -->
+    <link rel="stylesheet" href="{{ app.request.basepath }}/style/ol.css" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script>
+    <!-- <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script> -->
+    <script src="{{ app.request.basepath }}/scripts/ol.js" type="text/javascript"></script>
     <title>Search Demo 2</title>
 </head>
 <body>
@@ -17,6 +19,10 @@
 <div id="info">
 
 </div>
+
+
+
+
 <div class="layers">
 </div>
 
