--- a/views/home.twig
+++ b/views/home.twig
@@ -52,7 +52,7 @@
 
 
                 <li id="fullscreen-link" class="popupHoverElement"><div id="two" class="popupBox">Vergroten</div><a></a></li>
-                <li id="depth-link" class="popupHoverElement"><div id="two" class="popupBox">Diepteprofiel</div><a></a></li>
+                <insert id="depth-link" class="popupHoverElement"><div id="two" class="popupBox">Diepteprofiel</div><a></a></insert>
                 <li id="share-link" class="popupHoverElement"><div id="two" class="popupBox">Share</div><a></a></li>
                 <li id="print-link" class="popupHoverElement"><div id="two" class="popupBox">Print</div><a></a></li>
                 <li id="question-link" class="popupHoverElement"><div id="two" class="popupBox">Handleiding</div><a></a></li>
