--- a/views/home.twig
+++ b/views/home.twig
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="{{ app.request.basepath }}/style/ol.css" type="text/css">
     <link rel="stylesheet" href="{{ app.request.basepath }}/style/style.css" type="text/css">
     <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script src="{{ app.request.basepath }}/scripts/search.js" type="text/javascript"></script>
+    <script src="{{ app.request.basepath }}/scripts/d3chart.js" type="text/javascript"></script>
+
 
 
     <title>Sea-Arch</title>
@@ -43,6 +46,9 @@
 
                         <li id="button_close"></li>
                         <p><h3> SeArch - Archeologisch Erfgoed in de Noordzee</h3></p>
+                        <svg id="depthsvg">
+
+                        </svg>
 
                     </div>
 
