--- a/views/home.twig
+++ b/views/home.twig
@@ -61,7 +61,7 @@
                 <li id="draw-link" class="popupHoverElement"><div id="two" class="popupBox">Tekenen</div></li>
 
                 <li id="measure-link" class="popupHoverElement"><div id="two" class="popupBox">Meten</div></li>
-
+                <li id="polygon-link" class="popupHoverElement"><div id="two" class="popupBox">Polygon</div></li>
             </ul>
         </div>
     </div>
