--- a/views/home.twig
+++ b/views/home.twig
@@ -41,7 +41,7 @@
                 <li id="search-link" class="popupHoverElement"><div id="two" class="popupBox">Zoek</div></li>
                 <li id="info-link"class="popupHoverElement"><div id="two" class="popupBox">Info</div></li>
 
-                    <div id="Div3" style=" ">
+                    <div id="Div3" draggable="true" style=" ">
 
 
                         <li id="button_close"></li>
