--- a/views/baselayout.twig
+++ b/views/baselayout.twig
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <!-- <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script> -->
     <script src="{{ app.request.basepath }}/scripts/ol.js" type="text/javascript"></script>
+
+    <!--Cesium-->
+    <script src="http://openlayers.org/ol3-cesium/Cesium/Cesium.js"></script>
+    <!--Ol3-Cesium-->
+    <script src="http://openlayers.org/ol3-cesium/ol3cesium.js"></script>
+
+
+
     <title>Search Demo 2</title>
 </head>
 <body>
