--- a/web/style/style.css
+++ b/web/style/style.css
@@ -35,8 +35,10 @@ html, body{
 
 .map {
     height: 400px;
-    width: 100%;
+    width: 80%;
 }
+
+
 
 .navbar.navbar-default {
     top: 100px;
@@ -90,6 +92,8 @@ html, body{
     position: relative;
 
 }
+
+
 
 .layers:hover {
     text-indent: 0%;
@@ -197,7 +201,6 @@ a:focus, a:hover {
 }
 
 
-
 #two{
     visibility:visible;
     background: none repeat scroll 0 0 #EEEEEE;
@@ -277,22 +280,36 @@ a:focus, a:hover {
 
 
 
+
 #Div3 {
-    height: 400px;
-    width: 400px;
-    left: 600px;
+    height: 700px;
+    width: 1000px;
+    left: 300px;
     top: 100px;
-    color: black;
+    color: cornflowerblue;
     z-index: 5;
     position: absolute;
-    background: white;
+    background: #e9e9e9;
+    text-align: center;
     border: 1px solid #999;
+}
+
+#depthsvg {
+    height: 500px;
+    width: 900px;
+    left: 0px;
+    top: 100px;
+    z-index: 5;
+    position:absolute;
 
 
 }
 
+
+
+
 #button_close {
-    left: 380px;
+    left: 980px;
     top: 0px;
     height: 20px;
     width: 20px;
@@ -302,7 +319,7 @@ a:focus, a:hover {
     position: relative;
 }
 #polygon-link{
-    right: 340px;
+    right: 140px;
     position: absolute;
     background-image:  url('../Images/polygon.png');
     background-size: 20px 20px;
@@ -334,7 +351,7 @@ top: 10px;
 
 
 #depth-link{
-    right: 140px;
+    right: 340px;
     position: absolute;
     background-image:  url('../Images/Depth.png');
     background-size: 20px 20px;
@@ -346,8 +363,9 @@ top: 10px;
 
 #depth-link:hover{
     top: 10px;
-
 }
+
+
 #measure-link{
     right: 180px;
     position: absolute;
@@ -380,10 +398,10 @@ top: 10px;
     top: 10px;
 }
 
-#print-link{
+#download-link{
     right: 260px;
     position: absolute;
-    background-image:  url('../Images/printer.png');
+    background-image:  url('../Images/download.png');
     background-size: 20px 20px;
     background-repeat: no-repeat;
     top: 15px;
@@ -392,7 +410,7 @@ top: 10px;
 }
 
 
-#print-link:hover{
+#download-link:hover{
 
     top: 10px;
 
@@ -451,6 +469,21 @@ top: 10px;
 }
 
 
+
+#depthpoint-link{
+    right: 380px;
+    top: 15px;
+    position: absolute;
+    background-image:  url('../Images/depth_point.png');
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    height: 20px;
+    width: 20px;
+}
+#depthpoint-link:hover{
+    top: 10px;
+}
+
 .layer, .layer_active{
     width:200px;
     text-decoration:none;
@@ -495,6 +528,24 @@ top: 10px;
     display: none;
 }
 
+#depthpoint_box{
+    bottom: 70px;
+    left: 8px;
+    background: #95b9e6;
+    background: rgba(0,60,136,0.3);
+    border-radius: 4px;
+    padding: 2px;
+    position: absolute;
+    height: 100px;
+    width: 150px;
+    color: white;
+    text-height: 50px;
+    text-align:left;
+}
+
+
+
+
 /*D3 chart */
 .form_control{
     color: grey;
@@ -504,23 +555,32 @@ top: 10px;
     fill:red;
 }
 
+/* Grafiek lijn */
 path {
-    stroke: steelblue;
-    stroke-width: 2;
+    stroke: orange;
+    stroke-width: 1;
     fill: none;
+    transform: scale(2,2);
 }
 
 line {
     stroke: black;
+    transform: scale(2,2);
+    stroke-width: 0.5;
 }
 
 text {
     font-family: Arial;
     font-size: 9pt;
+
+
 }
 
-#depthsvg {
-    height: 400px;
-    width: 300px;
+
+.area {
+
+    /*stroke-width: 0.5;
+    */fill: lightsteelblue;
 }
+
 
