--- a/views/home.twig
+++ b/views/home.twig
@@ -6,19 +6,19 @@
           integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
           crossorigin="anonymous">
     <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
             integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
             crossorigin="anonymous"></script>
+    <script src="{{ app.request.basepath }}/scripts/search.js" type="text/javascript"></script>
 
     <!-- <link rel="stylesheet" href="http://openlayers.org/en/v3.0.0/css/ol.css" type="text/css"> -->
     <link rel="stylesheet" href="{{ app.request.basepath }}/style/ol.css" type="text/css">
     <link rel="stylesheet" href="{{ app.request.basepath }}/style/style.css" type="text/css">
     <script src="http://openlayers.org/en/v3.6.0/build/ol.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-    <script src="{{ app.request.basepath }}/scripts/search.js" type="text/javascript"></script>
-    <script src="{{ app.request.basepath }}/scripts/d3chart.js" type="text/javascript"></script>
 
+    <script src="{{ app.request.basepath }}/scripts/d3chart.js" type="text/javascript"></script>
+    <!-- <script src="{{ app.request.basepath }}/scripts/FeatureOverlay.js" type="text/javascript"></script> -->
 
 
     <title>Sea-Arch</title>
@@ -32,7 +32,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-           <!-- <a class="navbar-brand" href="/">GeoSearch</a> -->
+            <!-- <a class="navbar-brand" href="/">GeoSearch</a> -->
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
@@ -40,15 +40,16 @@
                 <li id="insert-link"class="popupHoverElement"><div id="two" class="popupBox">Toevoegen</div></li>
                 <li id="search-link" class="popupHoverElement"><div id="two" class="popupBox">Zoek</div></li>
                 <li id="info-link"class="popupHoverElement"><div id="two" class="popupBox">Info</div></li>
+                <li id="output"class="popupHoverElement"><div id="two" class="popupBox">Relaties</div></li>
 
-                    <div id="Div3" style=" ">
+                <div id="Div3" style=" ">
 
 
-                        <li id="button_close"></li>
-                        <p><h3> Diepteprofiel</h3></p>
-                        <svg id="depthsvg">    </svg> <!--hier komt de grafiek -->
+                    <li id="button_close"></li>
+                    <p><h3> Diepteprofiel</h3></p>
+                    <svg id="depthsvg">    </svg> <!--hier komt de grafiek -->
 
-                    </div>
+                </div>
 
                 <li id="fullscreen-link" class="popupHoverElement"><div id="two" class="popupBox">Vergroten</div><a></a></li>
                 <li id="depth-link" class="popupHoverElement"><div id="two" class="popupBox">Diepteprofiel</div><a></a></li>
@@ -77,9 +78,9 @@
         {% for group in groups %}
             <div class="layertitle">{{ group.name }}</div>
             {% for layer in group.layers %}
-                <a data-layer-id="{{ layer.id }}"
-                   class="toggle-layer layer{{ layer.visible?'_active':''}}" id="l{{ layer.id }}">{{ layer.legendName }}</a>
-            {% endfor %}
+            <a data-layer-id="{{ layer.id }}"
+               class="toggle-layer layer{{ layer.visible?'_active':''}}" id="l{{ layer.id }}">{{ layer.legendName }}</a>
+        {% endfor %}
         {% endfor %}
 
     </span>
@@ -97,31 +98,31 @@
             {% endfor %}
         </div>
     </span>
-    <span id="map" class="map"></span>
+<span id="map" class="map"></span>
 
 <div id="no-download" class="alert alert-error" style="display: none">
     This example requires a browser that supports the
     <a href="http://caniuse.com/#feat=download">link download</a> attribute.
 </div>
 
-    <span id="ol.control.Zoom" class="ol.control.Zoom"></span>
-    <span id="ol.Zoom" class="ol.Zoom"></span>
+<span id="ol.control.Zoom" class="ol.control.Zoom"></span>
+<span id="ol.Zoom" class="ol.Zoom"></span>
 
-    <div id="info">
-        <span id='close-info'></span>
-        <div id="info-contents">
-
-        </div>
+<div id="info">
+    <span id='close-info'></span>
+    <div id="info-contents">
 
     </div>
 
-    <div id="depthpoint_box">
-        <div id="depth-contents">
-        </div>
-        <div id="info-depth">
+</div>
 
-        </div>
-        </div>
+<div id="depthpoint_box">
+    <div id="depth-contents">
+    </div>
+    <div id="info-depth">
+
+    </div>
+</div>
 
 
 
@@ -130,8 +131,8 @@
 
 
 
-    <script type="text/javascript">
-        initGeoSearch({{layers|json_encode|raw}});
-    </script>
+<script type="text/javascript">
+    initGeoSearch({{layers|json_encode|raw}});
+</script>
 </body>
 </html>
