--- a/web/style/style.css
+++ b/web/style/style.css
@@ -35,7 +35,7 @@ html, body{
 
 .map {
     height: 400px;
-    width: 80%;
+    width: 100%;
 }
 
 
@@ -47,7 +47,7 @@ html, body{
 
 }
 .map-container {
-   height: 100%;
+    height: 100%;
 }
 
 #map{
@@ -134,49 +134,49 @@ html, body{
 
 .layertitle{
     padding-top: 40px;
-    padding-left: 20px;	
+    padding-left: 20px;
     color: rgb(75, 113, 151);
     font-size: 12pt;
 }
 
 .infotitle{
     padding-top: 10px;
-    padding-left: 10px;	
+    padding-left: 10px;
     color: rgb(75, 113, 151);
     font-size: 12pt;
     font-weight:bold;
 }
 
 .infoobject{
-margin-left:15px;
-margin-right:5px;
-border-left: 2px solid #DE6800;
-margin-top:10px;
-margin-bottom:10px;
-padding:3px;
+    margin-left:15px;
+    margin-right:5px;
+    border-left: 2px solid #DE6800;
+    margin-top:10px;
+    margin-bottom:10px;
+    padding:3px;
 }
 
 .infoname{
-font-weight:bold;
-background-color:#373C5A;
-font-size: 9pt;
-padding-top:2px;
-padding-bottom:2px;
+    font-weight:bold;
+    background-color:#373C5A;
+    font-size: 9pt;
+    padding-top:2px;
+    padding-bottom:2px;
 }
 
 .infopar{
-font-size: 8pt;
-padding-top:2px;
-padding-bottom:2px;	
+    font-size: 8pt;
+    padding-top:2px;
+    padding-bottom:2px;
 }
 
 .infopar a{
-color:	#DE6800;
-text-decoration:none;
+    color:	#DE6800;
+    text-decoration:none;
 }
 
 .infopar a:hover{
-text-decoration:none;
+    text-decoration:none;
 }
 
 a:focus, a:hover {
@@ -211,7 +211,7 @@ a:focus, a:hover {
     line-height: 20px;
     position: absolute;
     top: -20px;.
-    z-index: 5;
+z-index: 5;
 }
 
 .popupBox {
@@ -230,8 +230,9 @@ a:focus, a:hover {
     -o-transition-delay:0s;
     transition-delay: 0s;
     z-index: 5;
-
 }
+
+
 .popupHoverElement:hover > .popupBox {
     visibility:visible;
     opacity:1;
@@ -259,12 +260,29 @@ a:focus, a:hover {
 
 
 #insert-link:hover{
-        top: 10px;
+    top: 10px;
+
+}
+
+#output{
+    top: 15px;
+    left: 210px;
+    position: absolute;
+    background-image:  url('../Images/Geef info.png');
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    height: 20px;
+    width: 20px;
+}
+
+
+#output:hover{
+    top: 10px;
 
 }
 
 #info-link{
-     left: 90px;
+    left: 90px;
     top: 15px;
     position: absolute;
     background-image:  url('../Images/info.png');
@@ -276,7 +294,7 @@ a:focus, a:hover {
 #info-link:hover{
 
     top: 10px;
-    }
+}
 
 
 
@@ -346,7 +364,7 @@ a:focus, a:hover {
 }
 
 #draw-link:hover{
-top: 10px;
+    top: 10px;
 }
 
 
@@ -503,18 +521,18 @@ top: 10px;
 }
 
 .layer:hover{
-    background-color:#373C5A;	
+    background-color:#373C5A;
 }
 
 .layer_active:hover{
-    background-color:#FFAD65;	
+    background-color:#FFAD65;
 }
 
 
 
 .legende_content{
-   padding-top:0px;
-   padding-right:10px;
+    padding-top:0px;
+    padding-right:10px;
 }
 
 .legende_item {
@@ -582,5 +600,3 @@ text {
     /*stroke-width: 0.5;
     */fill: lightsteelblue;
 }
-
-
