--- a/views/baselayout.twig
+++ b/views/baselayout.twig
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
     <!-- <link rel="stylesheet" href="http://openlayers.org/en/v3.0.0/css/ol.css" type="text/css"> -->
     <link rel="stylesheet" href="{{ app.request.basepath }}/style/ol.css" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
