--- a/views/home.twig
+++ b/views/home.twig
@@ -56,7 +56,8 @@
                 <li id="fullscreen-link" class="popupHoverElement"><div id="two" class="popupBox">Vergroten</div><a></a></li>
                 <li id="depth-link" class="popupHoverElement"><div id="two" class="popupBox">Diepteprofiel</div><a></a></li>
                 <li id="share-link" class="popupHoverElement"><div id="two" class="popupBox">Share</div><a></a></li>
-                <li id="download-link" download="map.png" class="popupHoverElement"><div id="two" class="popupBox"><i class="icon-download"></i> Download</div><a></a></li>
+                <li id="download-link" class="popupHoverElement">
+                    <div id="two" class="popupBox"><i class="icon-download"></i> Download</div><a download="map.png"></a></li>
                 <li id="question-link" class="popupHoverElement"><div id="two" class="popupBox">Handleiding</div><a></a></li>
                 <li id="draw-link" class="popupHoverElement"><div id="two" class="popupBox">Tekenen</div></li>
                 <li id="measure-link" class="popupHoverElement"><div id="two" class="popupBox">Meten</div></li>
