--- a/views/home.twig
+++ b/views/home.twig
@@ -55,7 +55,10 @@
 
                 <li id="fullscreen-link" class="popupHoverElement"><div id="two" class="popupBox">Vergroten</div><a></a></li>
                 <li id="depth-link" class="popupHoverElement"><div id="two" class="popupBox">Diepteprofiel</div><a></a></li>
-                <li id="share-link" class="popupHoverElement"><div id="two" class="popupBox">Share</div><a></a></li>
+                <li id="share-link" class="popupHoverElement">
+                    <a id="fblink" target="_blank">
+                        <div id="two" class="popupBox">Share</div>
+                    </a></li>
                 <li id="download-link" class="popupHoverElement">
                     <div id="two" class="popupBox"><i class="icon-download"></i> Download</div><a download="map.png"></a></li>
                 <li id="question-link" class="popupHoverElement"><div id="two" class="popupBox">Handleiding</div><a></a></li>
