--- a/views/home.twig
+++ b/views/home.twig
@@ -80,7 +80,7 @@
     This example requires a browser that supports the
     <a href="http://caniuse.com/#feat=download">link download</a> attribute.
 </div>
-<div class="map-container">
+<div id="map-container">
     <span class="layers">
         {% for group in groups %}
             <div class="layertitle">{{ group.name }}</div>
