Some more styles
Fixes #13

--- a/views/home.twig
+++ b/views/home.twig
@@ -70,9 +70,9 @@
 </nav>
 <div id="depth-profile" style=" ">
     <li id="button_close"></li>
-    <p><h3> Diepteprofiel</h3></p>
+    <h3 class="hidden-xs"> Diepteprofiel</h3>
 
-    <p>TAW [m]</p>
+    <p class="hidden-sm hidden-xs">TAW [m]</p>
     <i class="glyphicon glyphicon-refresh spinner btn-lg"></i>
     <svg id="depthsvg">    </svg> <!--hier komt de grafiek -->
 </div>
