--- a/web/style/style.css
+++ b/web/style/style.css
@@ -116,6 +116,7 @@ ul.nav li, .navbar-default ul.nav li a, .navbar-default ul.nav li a:hover {
 /* Map */
 #map-container {
     position: relative;
+    height: 100%;
 }
 
 #map {
@@ -270,7 +271,6 @@ text {
 }
 
 /* Info */
-
 #close-info {
     position: absolute;
     height: 20px;
@@ -282,18 +282,17 @@ text {
     right: 0;
 }
 
-
 #info {
     width:230px;
     background-color: rgb(37, 42, 58);
-    position: fixed;
+    position: absolute;
     right: 0;
     z-index: 1000;
     height: 100%;
     display:none;
     color: white;
     overflow: auto;
-    top: 152px;
+    top: 0;
 }
 
 .infotitle {
@@ -339,10 +338,11 @@ text {
 #depth-profile {
     height: 80vh;
     width: 80vw;
-    margin: auto;
+    margin: 10vh 10vw;
+    top: 0;
     color: cornflowerblue;
     z-index: 5;
-    position: static;
+    position: fixed;
     background: #e9e9e9;
     text-align: center;
     border: 1px solid #999;
